--- a/INITIAL_MODELS.yaml
+++ b/INITIAL_MODELS.yaml
@@ -10,12 +10,12 @@ sd-1/main/stable-diffusion-RV5:
 sd-1/main/stable-diffusion-v1-5:
    description: Stable Diffusion version 1.5 diffusers model (4.27 GB)
    repo_id: runwayml/stable-diffusion-v1-5
-   recommended: False
-   default: False
+   recommended: True
+   default: True
 sd-1/main/stable-diffusion-inpainting:
    description: RunwayML SD 1.5 model optimized for inpainting, diffusers version (4.27 GB)
    repo_id: runwayml/stable-diffusion-inpainting
-   recommended: False
+   recommended: True
 sd-2/main/stable-diffusion-2-1:
    description: Stable Diffusion version 2.1 diffusers model, trained on 768 pixel images (5.21 GB)
    repo_id: stabilityai/stable-diffusion-2-1
